--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </div>        
 
         <ul class="nav_menu" id="nav_menu">
-            <li><a onclick="alert()" href="#">Contact number</a></li>
+            <li><a onclick="alert()" href="#">Contact number123</a></li>
             <li><a href="https://www.youtube.com/channel/UCIlG6iYlNwNVqkgYgHdKGVw">YouTube</a></li>
             <li><a href="https://1drv.ms/u/s!Asadk8ojfwoqiH-LJJJrb6b1U6Uj?e=VnlKXg">Gallery</a></li>
             <li><a id="map_button" href="#map">Maps</a></li>
