--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="naver-site-verification" content="eec3f069e4531a81d9b4988c1de470e715a09dc3" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">    
     <link rel="stylesheet" href="style.css">
@@ -9,7 +10,7 @@
     <script src="https://kit.fontawesome.com/e24a44e0a5.js" crossorigin="anonymous"></script>
     <script scr="../main.js" defer></script>
     <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
-    <title>Youngsuk's Life</title>
+    <title>The easiest way to find freelancers</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script>
         $(document).ready(function(){
@@ -70,24 +71,25 @@
     <nav>
         <div class="nav_logo">
             <i class="fas fa-plane"></i>
-            <a href="#" >Youngsuk Kim</a>
+            <a href="Https://www.HiLancers.com" >HiLancers!</a>
         </div>        
 
         <ul class="nav_menu" id="nav_menu">
-            <li><a onclick="alert()" href="#">Contact number123</a></li>
-            <li><a href="https://www.youtube.com/channel/UCIlG6iYlNwNVqkgYgHdKGVw">YouTube</a></li>
-            <li><a href="https://1drv.ms/u/s!Asadk8ojfwoqiH-LJJJrb6b1U6Uj?e=VnlKXg">Gallery</a></li>
+            <li><a href="https://www.hilancers.com/q" id="nav_menu1">Life Style</a></li>
+            <li><a href="#" id="nav_menu2">Education</a></li>
+            <li><a href="#" id="nav_menu3">Tech</a></li>
+            <li><a href="#" id="nav_menu3">Physical</a></li>
             <li><a id="map_button" href="#map">Maps</a></li>
         </ul>
         
         <ul class="nav_icons">
             <li>
-                <a href="https://www.facebook.com/profile.php?id=100003043302231" target="_blank">
-                <i class="fab fa-facebook-square"></i></a>
+                <a href="#" target="_blank">
+                <i class="fas fa-user"></i></a>
             </li>
             <li>
-                <a href="https://www.instagram.com/pkkpokko123/" target="_blank">
-                <i class="fab fa-instagram"></i></a>
+                <a href="#" target="_blank">
+                <i class="fas fa-cog"></i></a>
             </li>
         </ul>
 
@@ -171,3 +173,15 @@
                 </div>
             </div>
         </section>
+    </main>
+</body>
+
+<footer>
+    <section class="footer_box">
+        <div class="footer_main">
+            <div>김영석</div>
+            <div>010-3008-4550</div>
+        </div>
+    </section>
+</footer>
+
