--- a/index.html
+++ b/index.html
@@ -1,16 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta name="naver-site-verification" content="eec3f069e4531a81d9b4988c1de470e715a09dc3" />
+<head>    
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">    
+    <meta name="description" content="가장 쉬운 서비스 구매, 하이랜서스">
+    <meta name="description" content="The easiest way to find freelancers near you!">
+    <meta name="title" content="하이랜서스">
+    <meta name="title" content="하이랜서">
+    <meta name="title" content="Hilacners">
+    <meta name="title" content="Hilancer">
+    <meta property="og:site_name" content="HiLancers">
+    <meta property="og:type" content="article">
+    <meta property="og:title" content="HiLancers">
+    <meta property="og:description" content="가장 쉬운 서비스 구매, 하이랜서스">
+    <meta property="og:image" content="">
+    <meta name="referrer" content="always">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="canonical" href="https://www.hilancers.com">    
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/e24a44e0a5.js" crossorigin="anonymous"></script>
     <script scr="../main.js" defer></script>
     <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
-    <title>The easiest way to find freelancers</title>
+    <title>가장 쉬운 서비스 구매 방법 하이랜서스</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script>
         $(document).ready(function(){
