--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>    
     <meta charset="UTF-8">
-    <meta name="description" content="가장 쉬운 서비스 구매, 하이랜서스">
+    <meta name="description" content="쉬운 서비스 구매, 하이랜서스">
     <meta name="description" content="The easiest way to find freelancers near you!">
     <meta name="title" content="하이랜서스">
     <meta name="title" content="하이랜서">
@@ -11,7 +11,7 @@
     <meta property="og:site_name" content="HiLancers">
     <meta property="og:type" content="article">
     <meta property="og:title" content="HiLancers">
-    <meta property="og:description" content="가장 쉬운 서비스 구매, 하이랜서스">
+    <meta property="og:description" content="쉬운 서비스 구매, 하이랜서스">
     <meta property="og:image" content="">
     <meta name="referrer" content="always">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,7 +22,7 @@
     <script src="https://kit.fontawesome.com/e24a44e0a5.js" crossorigin="anonymous"></script>
     <script scr="../main.js" defer></script>
     <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
-    <title>가장 쉬운 서비스 구매 방법 하이랜서스</title>
+    <title>쉬운 서비스 구매, 하이랜서스</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script>
         $(document).ready(function(){
