--- a/index.html
+++ b/index.html
@@ -117,30 +117,45 @@
     <header>
         <section>
             <div class="search__box">
-                <div class="search__title">Let me reach out to you!</div>
-                    <table>
-                        <tbody><tr>
-                            <td colspan="2" class="search__sub__title">your contact # / ID</td>
-                        </tr>
-                        <tr>
-                            <td colspan="2"><input id="emailFrom" class="search__input" type="text" placeholder="Type"></td>
-                        </tr>
-                        <tr>
-                            <td colspan="2" class="search__sub__title">contact method</td>
-                        </tr>
-                        <tr>
-                            <td colspan="2">
-                                <select id="subject" class="search__input">
-                                    <option>Email</option>
-                                    <option>Facebook</option>
-                                    <option>Instagram</option>
-                                </select>
-                            </td>
-                        </tr>
-                        </tbody>
-                    </table>
-                    <div id="submit" class="search__button"><button onclick="emailsend()">Send</button></div>
-                </div>
+                <form action="#">
+                    <div class="search_title">상세검색</div>
+                    <input type="text" value="도그 워커" id="search_type">
+                    <select id="search_select" class="search_need">
+                        <option>필요해요</option>
+                        <option>제공해요</option>
+                    </select>
+                    <div class="onoff">
+                    <input type="checkbox" value="온라인">
+                    <span>온라인</span>
+                    <input type="checkbox" value="오프라인">
+                    <span>오프라인</span>
+                    <div class="offline_active">
+                        <input type="number" value="service_range" id="service_range">
+                        <span>km 이내</span>
+                    </div>
+                    <div class="search_price">
+                        <span>가격</span>
+                        <input type="number" value="price_min" id="price_min">
+                        <span>이상</span>
+                        <input type="number" value="price_max" id="price_max">
+                        <span>이하(원)</span>
+                    </div>
+                    <div class="search_rate">
+                        <span>레벨</span>
+                        <div class="display-wrapper">
+                            <span class="rating-wrap">
+                              <i class="rate-star" data-rating="3">★<p class="no-show"></p></i>
+                              <i class="rate-star" data-rating="2">★<p class="no-show"></p></i>
+                              <i class="rate-star" data-rating="1">★<p></p></i>
+                            </span>
+                          </div>               
+                    </div>
+                    </div>
+                    <span class="search__title"></span>
+                        
+                        <div id="submit" class="search__button"><button onclick="emailsend()">search</button></div>
+                </form>
+            </div>        
         </section>
     </header>
 
