--- a/index.html
+++ b/index.html
@@ -119,11 +119,14 @@
             <div class="search__box">
                 <form action="#">
                     <div class="search_title">상세검색</div>
-                    <input type="text" value="도그 워커" id="search_type">
-                    <select id="search_select" class="search_need">
-                        <option>필요해요</option>
-                        <option>제공해요</option>
-                    </select>
+                        <div class="search_input">
+                            <input type="text" value="도그 워커" id="search_type">
+                        <select id="search_select" class="search_need">
+                            <option>필요해요</option>
+                            <option>제공해요</option>
+                        </select>
+                    </div>
+                    
                     <div class="onoff">
                     <input type="checkbox" value="온라인">
                     <span>온라인</span>
