--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                         <span>이하(원)</span>
                     </div>
                     <div class="search_rate">
-                        <span>레벨</span>
+                        <span>경력</span>
                         <div class="display-wrapper">
                             <span class="rating-wrap">
                               <i class="rate-star" data-rating="3">★<p class="no-show"></p></i>
