Changed to ENG and Added Django

--- a/index.html
+++ b/index.html
@@ -1,17 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>    
-    <meta charset="UTF-8">
-    <meta name="description" content="쉬운 서비스 구매, 하이랜서스">
-    <meta name="description" content="The easiest way to find freelancers near you!">
-    <meta name="title" content="하이랜서스">
-    <meta name="title" content="하이랜서">
+    <meta charset="UTF-8">   
+    <meta name="description" content="The easiest way to find freelancers near you">
     <meta name="title" content="Hilacners">
-    <meta name="title" content="Hilancer">
     <meta property="og:site_name" content="HiLancers">
     <meta property="og:type" content="article">
     <meta property="og:title" content="HiLancers">
-    <meta property="og:description" content="쉬운 서비스 구매, 하이랜서스">
+    <meta property="og:description" content="The easiest way to find freelancers near you">
     <meta property="og:image" content="">
     <meta name="referrer" content="always">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,7 +18,7 @@
     <script src="https://kit.fontawesome.com/e24a44e0a5.js" crossorigin="anonymous"></script>
     <script scr="../main.js" defer></script>
     <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
-    <title>쉬운 서비스 구매, 하이랜서스</title>
+    <title>HiLancers! The easiest way to find freelancers near you</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script>
         $(document).ready(function(){
@@ -87,10 +83,10 @@
         </div>        
 
         <ul class="nav_menu" id="nav_menu">
-            <li><a href="https://www.hilancers.com/q" id="nav_menu1">Life Style</a></li>
-            <li><a href="#" id="nav_menu2">Education</a></li>
-            <li><a href="#" id="nav_menu3">Tech</a></li>
-            <li><a href="#" id="nav_menu3">Physical</a></li>
+            <li><a href="https://www.hilancers.com/q" id="nav_menu1">Make Easy Money</a></li>
+            <li><a href="#" id="nav_menu2">Service Offering</a></li>
+            <li><a href="#" id="nav_menu3">Service in Need</a></li>
+            <li><a href="https://www.hilancers.co.kr/" id="nav_menu3">Korean</a></li>
             <li><a id="map_button" href="#map">Maps</a></li>
         </ul>
         
@@ -118,33 +114,33 @@
         <section>
             <div class="search__box">
                 <form action="#">
-                    <div class="search_title">상세검색</div>
+                    <div class="search_title">Search</div>
                         <div class="search_input">
                             <input type="text" value="도그 워커" id="search_type">
                         <select id="search_select" class="search_need">
-                            <option>필요해요</option>
-                            <option>제공해요</option>
+                            <option>Service in need</option>
+                            <option>Service offering</option>
                         </select>
                     </div>
                     
                     <div class="onoff">
                     <input type="checkbox" value="온라인">
-                    <span>온라인</span>
+                    <span>Online</span>
                     <input type="checkbox" value="오프라인">
-                    <span>오프라인</span>
+                    <span>Offline</span>
                     <div class="offline_active">
                         <input type="number" value="service_range" id="service_range">
-                        <span>km 이내</span>
+                        <span>Range of miles</span>
                     </div>
                     <div class="search_price">
-                        <span>가격</span>
+                        <span>Price</span>
                         <input type="number" value="price_min" id="price_min">
-                        <span>이상</span>
+                        <span>At or above</span>
                         <input type="number" value="price_max" id="price_max">
-                        <span>이하(원)</span>
+                        <span>At or below</span>
                     </div>
                     <div class="search_rate">
-                        <span>경력</span>
+                        <span>Career</span>
                         <div class="display-wrapper">
                             <span class="rating-wrap">
                               <i class="rate-star" data-rating="3">★<p class="no-show"></p></i>
@@ -209,8 +205,8 @@
 <footer>
     <section class="footer_box">
         <div class="footer_main">
-            <div>김영석</div>
-            <div>010-3008-4550</div>
+            <div>If you have any questions, contact me via</div>
+            <div>1990youngsuk@gamil.com</div>
         </div>
     </section>
 </footer>
