--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 <form action="#">
                     <div class="search_title">Search</div>
                         <div class="search_input">
-                            <input type="text" value="도그 워커" id="search_type">
+                            <input type="text" value="Pet sitter" id="search_type">
                         <select id="search_select" class="search_need">
                             <option>Service in need</option>
                             <option>Service offering</option>
@@ -124,9 +124,9 @@
                     </div>
                     
                     <div class="onoff">
-                    <input type="checkbox" value="온라인">
+                    <input type="checkbox" value="Online">
                     <span>Online</span>
-                    <input type="checkbox" value="오프라인">
+                    <input type="checkbox" value="Offline">
                     <span>Offline</span>
                     <div class="offline_active">
                         <input type="number" value="service_range" id="service_range">
